# team-content-engine

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  The Agent Revolution Why Your SaaS Stack Is About to Become Obsolete.docx  The Agent Revolution Why Your SaaS Stack Is About to Become Obsolete.json  alembic.ini  docker-compose.yml  gaps-kmboards-integration.md  gaps.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_ab_testing_fields.py  003_add_p1_tables.py  004_add_calendar_buffer_fields.py  005_add_feature_flags_and_missing_fields.py  006_add_extracted_text.py  007_add_package_archived.py  008_add_guide_archived.py  009_add_pipeline_runs.py  010_add_revised_text_to_feedback.py  011_add_plan_context_to_calendar.py  012_add_weekly_plans_table.py  013_add_video_assets_table.py  014_add_render_queue_table.py  015_add_narration_scripts.py  016_add_research_brief_id_to_post_packages.py  017_add_4week_planner_tables.py  018_add_brand_profiles.py  019_add_video_lead_scripts.py  020_add_workspace_id_to_all_tables.py  021_add_proof_trail_to_post_packages.py  023_add_tracked_repos.py  (+14 more)
docs/: PRD.md  guide-writing-guidelines.md  open_source_evaluation.md  repo-portfolio.md  super-coaching-strategy.md  ui-ux-spec.md
plans/: 28-Mar-26-prd-gaps.md
remotion/: package-lock.json  package.json  tsconfig.json
scripts/: cleanup-instaiq-videos.sh  deploy-restart.sh  pm2-register.sh  reanalyze_all.py  regenerate_guide.py  seed_tracked_repos.py  serve_with_guide.py
tests/: conftest.py
(+260 files in other folders)
