[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-content-engine"
version = "0.1.0"
description = "Agentic content engine that learns from a swipe corpus and produces daily social media packages"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-docx>=1.1",
    "structlog>=24.1",
    "tenacity>=8.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tce"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/tce/api/dashboard.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
